# statemachine

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: basics.py  branching.py  context_managers.py  diagram.py  door.py  door_with_access_log.py  error.py  minimal.py  state_naming.py  state_with_delayed_completion.py
src/statemachine/: __init__.py  diagram.py  errors.py  state.py  statemachine.py  transition.py
tests/: test_context.py  test_state.py  test_state_machine.py  test_transition.py  test_use_and_when.py
