[metadata]
name = statemachine
version = attr: statemachine.__version__
author = Sami laine
author_email = sami.jy.laine@gmail.com
description = This module provides a simple and flexible finite state machine using Python classes.
long_description = file: README.md
long_description_content_type = text/markdown
readme = "README.md"
url = https://github.com/yourusername/your-package
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src
exclude =
    examples*
    tests*

[options.extras_require]
dev =
    pytest
    black
    mypy
    setuptools
